--- a/ml8/ml_pipilines_practice.ipynb
+++ b/ml8/ml_pipilines_practice.ipynb
@@ -2,20 +2,402 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#загрузим основные библиотеки\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn import pipeline\n",
+    "from sklearn import ensemble\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import tree\n",
     " \n",
-    "from sklearn.datasets import fetch_california_housing\n",
-    "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score"
+    "\n",
+    "from sklearn import metrics\n",
+    "from sklearn import model_selection\n",
+    "from sklearn import compose\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wine = pd.read_csv('data/Red.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct = compose.make_column_transformer(\n",
+    "    (preprocessing.StandardScaler(), ['Price']),\n",
+    "    (preprocessing.OneHotEncoder(), ['Country']),\n",
+    "    (preprocessing.OrdinalEncoder(), ['Region'])\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = pipeline.Pipeline([\n",
+    "    ('ct', ct),\n",
+    "    ('rf', ensemble.RandomForestRegressor(random_state=42))\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_wine[['Price', 'Country', 'Region']]\n",
+    "y = df_wine['Rating']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rmse(y_hat, y):\n",
+    "    return metrics.mean_squared_error(y_hat, y, squared = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ct',\n",
+       "                 ColumnTransformer(transformers=[('standardscaler',\n",
+       "                                                  StandardScaler(), ['Price']),\n",
+       "                                                 ('onehotencoder',\n",
+       "                                                  OneHotEncoder(),\n",
+       "                                                  ['Country']),\n",
+       "                                                 ('ordinalencoder',\n",
+       "                                                  OrdinalEncoder(),\n",
+       "                                                  ['Region'])])),\n",
+       "                ('rf', RandomForestRegressor(random_state=42))])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.fit(X, y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wine_test = pd.read_csv('data/Red_test.csv')\n",
+    "\n",
+    "X_test = df_wine_test[['Price', 'Country', 'Region']]\n",
+    "y_test = df_wine_test['Rating']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15.50</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Lirac</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.45</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Toscana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.72</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Bardolino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>29.15</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Carnuntum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19.90</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Toscana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275</th>\n",
+       "      <td>486.42</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Toscana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>48.40</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Toscana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>277</th>\n",
+       "      <td>7.25</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Toscana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>278</th>\n",
+       "      <td>13.90</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Toscana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>279</th>\n",
+       "      <td>63.39</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Toscana</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>280 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Price  Country     Region\n",
+       "0     15.50   France      Lirac\n",
+       "1      7.45    Italy    Toscana\n",
+       "2      8.72    Italy  Bardolino\n",
+       "3     29.15  Austria  Carnuntum\n",
+       "4     19.90    Italy    Toscana\n",
+       "..      ...      ...        ...\n",
+       "275  486.42    Italy    Toscana\n",
+       "276   48.40    Italy    Toscana\n",
+       "277    7.25    Italy    Toscana\n",
+       "278   13.90    Italy    Toscana\n",
+       "279   63.39    Italy    Toscana\n",
+       "\n",
+       "[280 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = pipe.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Качество по метрике R2: 0.9396\n",
+      "Качество по RSME: 0.0763\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Качество по метрике R2: { round(metrics.r2_score(y_test, y_pred),4)}')\n",
+    "print(f'Качество по RSME: {round(rmse(y_test, y_pred),4)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pipeline_wine.plk']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(pipe, 'pipeline_wine.plk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe2 = joblib.load('pipeline_wine.plk')\n",
+    "\n",
+    "pipe.set_params(rf__n_estimators=200)\n",
+    "\n",
+    "pipe.fit(X, y)\n",
+    "\n",
+    "y_pred = pipe.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Качество по метрике R2: 0.94\n",
+      "Качество по RSME: 0.076\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Качество по метрике R2: { round(metrics.r2_score(y_test, y_pred),4)}')\n",
+    "print(f'Качество по RSME: {round(rmse(y_test, y_pred),4)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ct',\n",
+       "                 ColumnTransformer(transformers=[('standardscaler',\n",
+       "                                                  StandardScaler(), ['Price']),\n",
+       "                                                 ('onehotencoder',\n",
+       "                                                  OneHotEncoder(),\n",
+       "                                                  ['Country']),\n",
+       "                                                 ('ordinalencoder',\n",
+       "                                                  OrdinalEncoder(),\n",
+       "                                                  ['Region'])])),\n",
+       "                ('sr',\n",
+       "                 StackingRegressor(estimators=[('rc',\n",
+       "                                                RidgeCV(alphas=array([ 0.1,  1. , 10. ]))),\n",
+       "                                               ('dt',\n",
+       "                                                DecisionTreeRegressor(random_state=42))],\n",
+       "                                   final_estimator=RandomForestRegressor(n_estimators=10,\n",
+       "                                                                         random_state=42)))])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimators = [\n",
+    "    ('rc', linear_model.RidgeCV()),\n",
+    "    ('dt', tree.DecisionTreeRegressor(random_state=42))\n",
+    "]\n",
+    "\n",
+    "pipe = pipeline.Pipeline([\n",
+    "    ('ct', ct),\n",
+    "    ('sr', ensemble.StackingRegressor(\n",
+    "        estimators=estimators,\n",
+    "        final_estimator=ensemble.RandomForestRegressor(\n",
+    "            n_estimators=10,\n",
+    "            random_state=42\n",
+    "        )\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "pipe.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Качество по метрике R2: 0.6653\n",
+      "Качество по RSME: 0.1795\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = pipe.predict(X_test)\n",
+    "\n",
+    "print(f'Качество по метрике R2: { round(metrics.r2_score(y_test, y_pred),4)}')\n",
+    "print(f'Качество по RSME: {round(rmse(y_test, y_pred),4)}')"
    ]
   }
  ],
